--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="bg"></div>
     </header>
     <main>
-        <div class="left"></div>
+        <div class="left"><img src="/img/illustration-mockups.svg" alt="picture table"></div>
         <div class="right">
             <h1>Build The Community Your Fans Will Love</h1>
             <p>
